--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,5 @@ spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-
-server.port=8080
-
-#cloud_sql_proxy.exe -instances=norse-rampart-315221:us-central1:not-gmail=tcp:5431
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto =update
